# Phantom.Coroutines

./: .gitignore  .runsettings  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  LICENSE  Phantom.Coroutines.natvis  README.md  vcpkg.json
Documentation/: async_generator.md  async_mutex.md  async_promise.md  async_scope.md  awaiter_wrapper.md  conventions.md  early_termination_task.md  extensible_promise.md  header.md  policies.md  promise_allocator.md  read_copy_update.md  schedulers.md  shared_task.md  suspend_result.md  sync_wait.md  task.md  type_traits.md
Phantom.Coroutines/: CMakeLists.txt  assert_same_thread.ixx  async_auto_reset_event.ixx  async_generator.ixx  async_manual_reset_event.ixx  async_mutex.ixx  async_promise.ixx  async_scope.ixx  atomic_state.ixx  consecutive_global_id.ixx  coroutine.ixx  early_termination_task.ixx  error_condition_early_termination.ixx  fibonacci_heap.ixx  final_suspend_transfer.ixx  generator.ixx  immovable_object.ixx  inline_scheduler.ixx  non_copyable.ixx  promise_traits.ixx  read_copy_update.ixx  reusable_consecutive_global_id.ixx  scheduler.ixx  scope_guard.ixx  sequence_barrier.ixx  shared_task.ixx  single_consumer_auto_reset_event.ixx  single_consumer_event.ixx  single_consumer_manual_reset_event.ixx  single_consumer_promise.ixx  static_thread_pool.ixx  storage_for.ixx  suspend_result.ixx  sync_wait.ixx  task.ixx  thread_pool_scheduler.ixx  type_traits.ixx  variant_member.ixx  variant_result_storage.ixx  when_ready.ixx
Phantom.Coroutines.Modules/: CMakeLists.txt  Phantom.Coroutines.ixx  aligned_array.ixx  assert_same_thread.ixx  async_atomic.ixx  async_auto_reset_event.ixx  async_generator.ixx  async_latch.ixx  async_manual_reset_event.ixx  async_mutex.ixx  async_promise.ixx  async_reader_writer_lock.ixx  async_scope.ixx  async_sequence_barrier.ixx  async_sharded_reader_writer_lock.ixx  atomic_shared_ptr.ixx  atomic_state.ixx  await_all_await_transform.ixx  await_none_await_transform.ixx  awaiter_list.ixx  awaiter_wrapper.ixx  config_globals.ixx  consecutive_global_id.ixx  consecutive_thread_id.ixx  construct_from_base.ixx  constructible_from_base.ixx  contextual_promise.ixx  core_task.ixx  coroutine.ixx  direct_initialized_optional.ixx  double_wide_atomic.ixx  early_termination_task.ixx  error_condition_early_termination.ixx  expected_early_termination.ixx  extensible_promise.ixx  fibonacci_heap.ixx  final_suspend_transfer.ixx  friendly_coroutine_traits.ixx  function_traits.ixx  generator.ixx  (+31 more)
Phantom.Coroutines.Test/: CMakeLists.txt  CMakelists.txt  Phantom.Coroutines.Test.props  aligned_array_test.cpp  async_atomic_test.cpp  async_auto_reset_event_test.cpp  async_generator_test.cpp  async_latch_test.cpp  async_manual_reset_event_test.cpp  async_mutex_test.cpp  async_promise_test.cpp  async_reader_writer_lock_test.cpp  async_scope_test.cpp  async_sequence_barrier_test.cpp  async_sharded_reader_writer_lock_test.cpp  async_test.cpp  async_test.h  atomic_state_test.cpp  auto_reset_event_test.cpp  awaiter_list_test.cpp  awaiters.ixx  cancellation_token_test.cpp  contextual_promise_test.cpp  direct_initialized_optional_test.cpp  double_wide_atomic_test.cpp  early_termination_task_test.cpp  enable_if_in_types_test.cpp  fibonacci_heap_test.cpp  friendly_coroutine_traits_test.cpp  function_traits_test.cpp  generator_test.cpp  inline_scheduler_test.cpp  lifetime_tracker.h  lifetime_tracker.ixx  make_Task_test.cpp  manual_reset_event_test.cpp  manual_scheduler.h  nonatomic_shared_ptr_test.cpp  pmr_task.h  pmr_task.ixx  (+30 more)
Phantom.Coroutines.cppcoro/: CMakeLists.txt
Phantom.Coroutines.cppcoro.Test/: CMakelists.txt  async_auto_reset_event_test.cpp  async_manual_reset_event_test.cpp  async_mutex_test.cpp  async_scope_test.cpp  async_test.cpp  async_test.h  cppcoro_async_auto_reset_event_test.cpp  cppcoro_async_generator_test.cpp  cppcoro_async_latch_test.cpp  cppcoro_async_manual_reset_event_test.cpp  cppcoro_async_mutex_test.cpp  cppcoro_async_scope_test.cpp  cppcoro_cancellation_source_test.cpp  cppcoro_inline_scheduler_test.cpp  cppcoro_is_awaitable_test.cpp  cppcoro_sequence_barrier_test.cpp  cppcoro_shared_task_test.cpp  cppcoro_single_consumer_event_test.cpp  cppcoro_static_thread_pool_test.cpp  cppcoro_task_test.cpp  generator_test.cpp  inline_scheduler_test.cpp  shared_task_test.cpp  task_test.cpp
Phantom.Coroutines/include/Phantom.Coroutines/: aligned_array.h  async_atomic.h  async_auto_reset_event.h  async_generator.h  async_latch.h  async_manual_reset_event.h  async_mutex.h  async_promise.h  async_reader_writer_lock.h  async_scope.h  async_sequence_barrier.h  async_sharded_reader_writer_lock.h  atomic_state.h  atomic_state_variant.h  auto_reset_event.h  await_all_await_transform.h  await_none_await_transform.h  awaiter_list.h  awaiter_wrapper.h  cancellation_token.h  consecutive_global_id.h  contextual_promise.h  direct_initialized_optional.h  double_wide_atomic.h  early_termination_task.h  error_condition_early_termination.h  expected_early_termination.h  extensible_promise.h  final_suspend_transfer.h  friendly_coroutine_traits.h  function_traits.h  generator.h  inline_scheduler.h  make_task.h  manual_reset_event.h  nonatomic_shared_ptr.h  policies.h  polymorphic_promise.h  processor_pool.h  promise.h  (+27 more)
Phantom.Coroutines/include/Phantom.Coroutines/detail/: assert_is_configured.h  assert_is_configured_module.h  assert_same_thread.h  atomic_shared_ptr.h  atomic_state.h  awaiter_wrapper.h  config.h  config_globals.h  config_macros.h  config_macros_clang.h  config_macros_clang_msvc.h  config_macros_msvc.h  consecutive_thread_id.h  construct_from_base.h  constructible_from_base.h  core_task.h  coroutine.h  deduce_this_workarounds.h  enable_if_in_types.h  event.h  fibonacci_heap.h  final_suspend_transfer.h  immovable_object.h  movable_pointer.h  non_copyable.h  promise_traits.h  scope_guard.h  single_consumer_event.h  storage_for.h  type_traits.h  variant_member.h  variant_result_storage.h
Phantom.Coroutines/src/: single_consumer_auto_reset_event.cpp
Tla/: .gitignore  AutoResetEvent.tla  ThreadPool.tla  (+17 more)
(+70 files in other folders)
